# Export

./: MANIFEST.in  README_FR.md  build_installer.py  build_instructions.md  fix_openslide.py  fix_openslide_runtime.py  installer_guide.md  main.py  pyproject.toml  requirements_build.txt  runtime_hook.py  setup.py
src/: main_window.py
src/core/: fragment_manager.py  group_manager.py  image_loader.py
src/ui/: canvas_widget.py  control_panel.py
src/utils/: pyramidal_exporter.py
